functional - upload method

--- a/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ArtfulAdventures.Web
 @using ArtfulAdventures.Web.ViewModels.Home
+@using ArtfulAdventures.Web.ViewModels.Picture
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
