succesfully implemented download from ftp server and  visualizing the images, added resizing of images to upload

--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                           <a class="nav-link text-dark" asp-area="" asp-controller="Explore" asp-action="Index">Explore</a>
+                           <a class="nav-link text-dark" asp-area="" asp-controller="Explore" asp-action="All">Explore</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
