--- a/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ArtfulAdventures.Web
+@using ArtfulAdventures.Web.ViewModels
 @using ArtfulAdventures.Web.ViewModels.Home
 @using ArtfulAdventures.Web.ViewModels.Picture
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
