--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
@@ -28,7 +28,8 @@
                         <div class="col-md-4">
                             <div class="mb-3 pt-3 pb-3">
                                 <br />
-                                <label class="form-label" for="file">Upload your media file here</label>
+                                <label class="form-label" for="file" style="white-space: nowrap;">Upload your media file here</label>
+
                                 <input class="form-control mb-2" type="file" name="file" id="file" style="width: 180%" />
                                 <br />
                                 <br />
