--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -12,25 +12,65 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+
+        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Artful Adventures</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" style="font-size: 1.7rem"  asp-area="" asp-controller="Home" asp-action="Index">Artful Adventures</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                           <a class="nav-link text-dark" asp-area="" asp-controller="Explore" asp-action="All">Explore</a>
+                <div class="collapse navbar-collapse" id="navbarColor02">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item" style="font-size: 1.3rem">
+                            <a class="nav-link active" asp-area="" asp-controller="Explore" asp-action="All">
+                                Explore
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item" style="font-size: 1.3rem">
+                            <a class="nav-link active" asp-area="" asp-controller="" asp-action="">
+                                Following
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item" style="font-size: 1.3rem">
+                            <a class="nav-link active" asp-area="" asp-controller="Picture" asp-action="Upload">
+                                Upload
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item" style="font-size: 1.3rem">
+                            <a class="nav-link active" asp-area="" asp-controller="" asp-action="">
+                                Blogs
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item" style="font-size: 1.3rem">
+                            <a class="nav-link active" asp-area="" asp-controller="" asp-action="">
+                                Challenges
+                                <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item mt-2" style="margin-left: 10rem; font-size:1.3rem;">
+                            <form class="d-flex">
+                                <input class="form-control" type="search" placeholder="Search">
+                                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                            </form>
                         </li>
                     </ul>
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Picture" asp-action="Upload">Upload</a>
+                    <ul class="nav-item mt-3" style="font-size: 1.3rem">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">User Profile</a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Separated link</a>
+                            </div>
                         </li>
                     </ul>
-                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
@@ -44,7 +84,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; Artful Adventures @releaseYear
-            @if(DateTime.UtcNow.Year != releaseYear)
+            @if (DateTime.UtcNow.Year != releaseYear)
             {
                 @Html.Raw($" - {DateTime.UtcNow.Year}")
             }
