some tweeks to css of navbar and layout in general

--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -15,7 +15,9 @@
 
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
-                <a class="navbar-brand" style="font-size: 1.7rem"  asp-area="" asp-controller="Home" asp-action="Index">Artful Adventures</a>
+                <a class="navbar-brand" href="/Home">
+                    <img src="https://cdn.discordapp.com/attachments/979101848361377914/1126958939007885442/gamer-logo-small.png" width="60" height="60" class="d-inline-block align-top" alt="">
+                    </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
