user profile view creation

--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
@@ -10,6 +10,7 @@
 
 @{
     <h2 class="text-center">@ViewBag.Title</h2>
+    <iframe src="index.html" title="map"></iframe>
 
     <div class="row">
         <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
