--- a/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using ArtfulAdventures.Web.ViewModels
 @using ArtfulAdventures.Web.ViewModels.Home
 @using ArtfulAdventures.Web.ViewModels.Picture
+@using ArtfulAdventures.Web.ViewModels.UserProfile
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
