--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Explore/All.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Explore/All.cshtml
@@ -60,12 +60,25 @@
                 </div>
             </form>
         </div>
-        <div class="bottom-section">
-            @foreach (var image in Model.PicturesIds)
-            {
-                <img class="block" id="@image.PictureUrl" src="~/images/@image.PictureUrl" alt="" style="width:20%; height:auto;" />
-
-            }
+        <div class="col-lg-12">
+            <div class="card mb-4">
+                <div class="card-body">
+                    @if (Model.PicturesIds != null && Model.PicturesIds.Count > 0)
+                    {
+                        <div style="display: flex; flex-wrap: wrap;">
+                            @foreach (var picture in Model.PicturesIds)
+                            {
+                                    <div style="flex-basis: 20%; padding: 5px; max-height: 100%;">
+                                <div style="width: 200px; height: 200px; overflow: hidden;">
+                                        <img src="~/images/@picture.PictureUrl" alt=" "
+                                             class="block" style="width: 100%; height: 100%; object-fit: cover;">
+                                    </div>
+                                </div>
+                            }
+                        </div>
+                    }
+                </div>
+            </div>
         </div>
     </div>
 }
