--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Profile.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Profile.cshtml
@@ -1,77 +1,33 @@
 ﻿@model ProfileViewModel
 
-@*
-<div class="wrapper">
-    <section class="profile-picture">
-        @if (Model.ProfilePictureUrl != null)
-        {
-            <img class="block" id="@Model.ProfilePictureUrl" src="~/images/@Model.ProfilePictureUrl" alt="" style="width:20%; height:auto;" />
-        }
-    </section>
-
-    <section class="profile-info">
-        <h1>@Model.Username</h1>
-
-        <p>@Model.Email</p>
-
-        @if (Model.Name != null)
-        {
-            <p>Name: @Model.Name</p>
-        }
-
-        @if (Model.Bio != null)
-        {
-            <p>Bio: @Model.Bio</p>
-        }
-
-        @if (Model.CityName != null)
-        {
-            <p>City: @Model.CityName</p>
-        }
-    </section>
-
-    <section class="profile-portfolio">
-        @if (Model.Pictures != null && Model.Pictures.Count > 0)
-        {
-            <h2>Pictures</h2>
-
-            @foreach (var picture in Model.Pictures)
-            {
-                <div>
-                    <img class="block" id="@picture.PictureUrl" src="~/images/@picture.PictureUrl" alt="" style="width:20%; height:auto;" />
-                </div>
-            }
-        }
-    </section>
-
-    <section class="profile-skills">
-        @if (Model.Skills != null && Model.Skills.Count > 0)
-        {
-            <h2>Skills</h2>
-
-            @foreach (var skill in Model.Skills)
-            {
-                <div>
-                    <p>@skill.Name</p>
-                </div>
-            }
-        }
-    </section>
-
-    <section class="profile-contact"><p>Contact: @Model.Contact</p></section>
-
-</div>*@
-
+@{
+    ViewBag.Title = "Profile";
+}
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-danger bg-dark text-white" role="alert">
+        @TempData["Message"]
+    </div>
+}
 
 <section>
     <div class="container py-3">
         <div class="card mb-4 mb-lg-0" style="max-width: 20rem; background: none; border: none;">
             <div class="card-body p-0">
                 <div class="d-flex  mb-3">
-                    <button type="button" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Portfolio</button>
+                    <form asp-area="" asp-controller="UserProfile" asp-action="Portfolio" method="get">
+                        <input type="hidden" name="username" value="@Model.Username" />
+                        <button type="submit" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Portfolio</button>
+                    </form>
                     <button type="button" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Collections</button>
-                    <button type="button" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Followers</button>
-                    <button type="button" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Following</button>
+                    <form asp-area="" asp-controller="UserProfile" asp-action="Followers" method="get">
+                        <input type="hidden" name="username" value="@Model.Username" />
+                        <button type="submit" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Followers</button>
+                    </form>
+                    <form asp-area="" asp-controller="UserProfile" asp-action="Following" method="get">
+                        <input type="hidden" name="username" value="@Model.Username" />
+                        <button type="submit" class="btn btn-outline-secondary" style="margin-right: 13px; color: white; border-color:rgb(218, 203, 246)">Following</button>
+                    </form>
                 </div>
                 <style>
                     .btn-outline-secondary:hover {
@@ -112,29 +68,43 @@
                             <p class="mb-4 text-black">@Model.Bio</p>
                         }
                         <div class="d-flex justify-content-center mb-2">
-                            <button type="button" class="btn btn-primary" style=" border-color:rgb(218, 203, 246)">Follow</button>
+                            @if (Model.isFollowed == true)
+                            {
+                                <form method="post" asp-area="" asp-controller="UserProfile" asp-action="Unfollow" asp-route-username="@Model.Username">
+                                    <button type="submit" class="btn btn-primary" style=" border-color:rgb(218, 203, 246)">
+                                        Unfollow
+                                    </button>
+                                </form>
+                            }
+                            else
+                            {
+                                <form method="post" asp-area="" asp-controller="UserProfile" asp-action="Follow" asp-route-username="@Model.Username">
+                                    <button type="submit" class="btn btn-primary" style=" border-color:rgb(218, 203, 246)">
+                                        Follow
+                                    </button>
+                                </form>
+                            }
                             <button type="button" class="btn btn-outline-primary ms-1" style="color:white; border-color:rgb(218, 203, 246)">Message</button>
                         </div>
                         <style>
                             .btn-outline-primary:hover,
-                            .btn-primary:hover{
+                            .btn-primary:hover {
                                 background-color: #6b8cce;
                             }
                         </style>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="card mb-4" style="width: 20rem;background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246)">
-                        <div class="card-body text-center">
-                            @if (Model.About != null)
-                            {
+                @if (Model.About != null)
+                {
+                    <div class="col-lg-4">
+                        <div class="card mb-4" style="width: 20rem; height:15rem;background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246)">
+                            <div class="card-body text-center">
                                 <h5 class="my-3">About</h5>
                                 <p class="mb-4 text-black">@Model.About</p>
-                            }
+                            </div>
                         </div>
                     </div>
-                </div>
-
+                }
             </div>
             <div class="col-lg-8">
                 <div class="card mb-4" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246)">
@@ -153,9 +123,35 @@
                                 }
                             </div>
                         }
+                        else
+                        {
+                            <h5 class="mb-1" style="color:white;">No pictures uploaded yet!</h5>
+                        }
                     </div>
                 </div>
                 <div class="col-lg-12">
+                    <div style="display:flex">
+                        <div class="col-lg-4" style="margin-right: 40px;">
+                            <div class="card mb-4" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246)">
+                                <div class="card-body text-center">
+                                    <h5 class="mb-1" style="color:rgb(218, 203, 246);">Skills</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4" style="margin-left: 40px; justify-content:flex-end;">
+                            <div class="card mb-4" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246); display: inline-block;">
+                                <div class="card-body text-center">
+                                    @if (Model.Email != null)
+                                    {
+                                        <h5 class="mb-1" style="color:rgb(218, 203, 246);white-space:nowrap;">Contact: @Model.Email</h5>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
                     <div class="card mb-5" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246)">
                         <div class="card-body" style="padding:0">
                             <div class="card-body" style="display: flex; flex-wrap: wrap;">
@@ -167,6 +163,10 @@
                                             <div class="d-inline p-2 bg-dark text-white"> @item.Name</div>
                                         </div>
                                     }
+                                }
+else
+                                {
+                                    <h5 class="mb-1" style="color:white;">No skills added yet!</h5>
                                 }
                             </div>
                         </div>
