following - basic implementation

--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             </a>
                         </li>
                         <li class="nav-item" style="font-size: 1.3rem">
-                            <a class="nav-link active" asp-area="" asp-controller="" asp-action="">
+                            <a class="nav-link active" asp-area="" asp-controller="Following" asp-action="All">
                                 Following
                                 <span class="visually-hidden">(current)</span>
                             </a>
