--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Picture/Upload.cshtml
@@ -12,6 +12,9 @@
     <h2 class="text-center">@ViewBag.Title</h2>
     <iframe src="index.html" title="map"></iframe>
 
+    <div asp-validation-summary="All" class="text-danger"></div>
+
+
     <div class="row">
         <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
 
@@ -23,7 +26,7 @@
                             <div class="mb-3 pt-3 pb-3">
                                 <label asp-for="@Model.Description" class="form-label-add-edit" style="font-size: 20px;">Description</label>
                                 <textarea asp-for="@Model.Description" class="form-control" aria-required="true" rows="15"></textarea>
-                                <span asp-validation-for="Description" class="text-danger"></span>
+                                <span asp-validation-for="@Model.Description" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="col-md-4">
