--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Explore/All.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Explore/All.cshtml
@@ -68,12 +68,7 @@
                         <div style="display: flex; flex-wrap: wrap;">
                             @foreach (var picture in Model.PicturesIds)
                             {
-                                    <div style="flex-basis: 20%; padding: 5px; max-height: 100%;">
-                                <div style="width: 200px; height: 200px; overflow: hidden;">
-                                        <img src="~/images/@picture.PictureUrl" alt=" "
-                                             class="block" style="width: 100%; height: 100%; object-fit: cover;">
-                                    </div>
-                                </div>
+                                @await Html.PartialAsync("_PictureGalleryPartial", picture)
                             }
                         </div>
                     }
