--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -24,13 +24,13 @@
                 <div class="collapse navbar-collapse" id="navbarColor02">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item" style="font-size: 1.3rem">
-                            <a class="nav-link active" asp-area="" asp-controller="Explore" asp-action="All">
+                            <a class="nav-link active" asp-area="" asp-controller="Explore" asp-action="All" asp-route-page="1">
                                 Explore
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item" style="font-size: 1.3rem">
-                            <a class="nav-link active" asp-area="" asp-controller="Following" asp-action="All">
+                            <a class="nav-link active" asp-area="" asp-controller="Following" asp-action="All" asp-route-page="1">
                                 Following
                                 <span class="visually-hidden">(current)</span>
                             </a>
