--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_PictureGalleryPartial.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_PictureGalleryPartial.cshtml
@@ -1,11 +1,14 @@
 ﻿@model PictureVisualizeViewModel
 
 
-<div style="flex-basis: 20%; padding: 5px; max-height: 100%;">
-    <a href="@Url.Action("PictureDetails", "Picture", new { id = Model.Id })">
-        <div style="width: 200px; height: 200px; overflow: hidden;">
-            <img src="~/images/@Model.PictureUrl" alt=" "
-                 class="block" style="width: 100%; height: 100%; object-fit: cover;">
-        </div>
-    </a>
-</div>
+    <div style="flex-basis: 20%; padding: 5px; max-height: 100%;">
+        <a href="@Url.Action("PictureDetails", "Picture", new { id = Model.Id })">
+            <div style="width: 200px; height: 200px; overflow: hidden;">
+                <img src="~/images/@Model.PictureUrl" alt=" "
+                     class="block shadow-1-strong rounded mb-4" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
+        </a>
+    </div>
+
+
+
